# cargo-profile

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
examples/: simple.rs
scripts/: test.sh
src/: cargo.rs  main.rs  util.rs
src/cli_tools/: dtrace.rs  mod.rs  profiler.rs
src/cpu/: merge.rs  mod.rs
src/flamegraph/: linux.rs  macos.rs  mod.rs
src/instrument/: instruments.rs  mod.rs
src/perf_report/: mod.rs
src/trace/: mod.rs  xctrace.rs
