[package]
authors = ["강동윤 <kdy1@dudy.kr"]
description = "Cargo subcommand to profile performance"
edition = "2018"
license = "Apache-2.0/MIT"
name = "cargo-profile"
repository = "https://github.com/kdy1/cargo-profile.git"
version = "0.1.0"

[dependencies]
anyhow = "1"
cargo_metadata = "0.12.1"
is_executable = "0.1.2"
structopt = {version = "0.3"}
